[gd_scene load_steps=24 format=3 uid="uid://bkk62r7c2in4o"]

[ext_resource type="Script" uid="uid://dm6ruavmc6vit" path="res://scripts/start_menu_scene.gd" id="1_2lrcc"]
[ext_resource type="Script" uid="uid://tde7i7v0b2lx" path="res://scripts/cam_rig.gd" id="1_3x8bj"]
[ext_resource type="PackedScene" uid="uid://clxmyq2gganal" path="res://scenes/art_scenes/car_solo[art].tscn" id="2_2lrcc"]
[ext_resource type="PackedScene" uid="uid://bdgkwd2or40oh" path="res://scenes/prefab_scenes/props/billboard_gate.tscn" id="3_gtf4h"]
[ext_resource type="PackedScene" uid="uid://bgcqx0fywcwjj" path="res://assets/models/banana_peeling.glb" id="3_oj3oc"]
[ext_resource type="PackedScene" uid="uid://d2tvvwavqsl10" path="res://scenes/prefab_scenes/props/maple_tree.tscn" id="4_0sh4n"]
[ext_resource type="PackedScene" uid="uid://dag8rxu5kmtaq" path="res://scenes/art_scenes/racer_ben[art].tscn" id="4_i6252"]
[ext_resource type="PackedScene" uid="uid://bfirpsfpd34qh" path="res://assets/models/banana_whole.glb" id="4_xt4fc"]
[ext_resource type="PackedScene" uid="uid://dy26raadejapx" path="res://scenes/art_scenes/skybox[art].tscn" id="5_s1q6x"]
[ext_resource type="Texture2D" uid="uid://dw2hkssw4q2pw" path="res://assets/textures/ui/ads/start_scene/start_ad_3.png" id="7_imw12"]
[ext_resource type="Texture2D" uid="uid://c1ww57to26ljw" path="res://assets/textures/ui/ads/start_scene/start_ad_2.png" id="8_f1hnb"]
[ext_resource type="Texture2D" uid="uid://bj6kec4ij2hoe" path="res://assets/textures/ui/ads/start_scene/start_ad_1.png" id="9_3xnvp"]
[ext_resource type="Texture2D" uid="uid://dx13p3g7vwrlt" path="res://assets/models/starting_line_concrete tile_64x64.png" id="10_xt4fc"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_an3dk"]
sky_top_color = Color(0.0637553, 0.618238, 0.883874, 1)
sky_horizon_color = Color(0.570372, 0.896429, 0.952946, 1)
ground_bottom_color = Color(0.598402, 0.779306, 0.31347, 1)
ground_horizon_color = Color(0.710443, 0.877264, 0.834224, 1)

[sub_resource type="Sky" id="Sky_v6fep"]
sky_material = SubResource("ProceduralSkyMaterial_an3dk")

[sub_resource type="Environment" id="Environment_3x8bj"]
background_mode = 2
sky = SubResource("Sky_v6fep")

[sub_resource type="BoxMesh" id="BoxMesh_hx4ke"]
size = Vector3(30, 1, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_odo3o"]
albedo_texture = ExtResource("10_xt4fc")
uv1_scale = Vector3(20, 20, 1)
texture_filter = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_s1q6x"]
top_radius = 3.5
bottom_radius = 3.5
height = 0.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2lrcc"]
bg_color = Color(0, 0, 0, 0.721569)
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0

[sub_resource type="Animation" id="Animation_2lrcc"]
resource_name = "play_subtitles"
length = 30.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subtitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subtitle/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.666667, 3.66667, 7.8, 11.4, 14.7667, 17.3, 20.1667, 24.3667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Announcer: [i][b]PEEL-OUT!![/b][/i] [Engines revving]", "Announcer: [i]Sponsored by Dick Peeler's Auto Shop, a family company[/i]", "Child: [i]Gee, Pops! I wish we had a reliable four-wheeler at affordable rates![/i]", "Father: [i]Well, kiddo... I think I know [b]JUST[/b] the place.[/i]", "[Jingle playing]: [i]♫ If you're lookin' for, a fine four-wheeler ♫[/i]", "[i]♫ Make your way down, to Dick Peeler's! ♫[/i]", "Dick Peeler(?):  [i]Dick Peeler's. A family company.[/i]", "[i][CHILD SQUEALS IN DELIGHT][/i]"]
}

[sub_resource type="Animation" id="Animation_i6252"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Subtitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subtitle/Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6252"]
_data = {
&"RESET": SubResource("Animation_i6252"),
&"play_subtitles": SubResource("Animation_2lrcc")
}

[node name="StartMenuScene" type="Node3D"]
script = ExtResource("1_2lrcc")

[node name="OmniLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
layers = 3
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3x8bj")

[node name="CamRig" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.689038, 0.724725, 0, -0.724725, 0.689038, 0, 2.29103, 0.0180929)
script = ExtResource("1_3x8bj")
sensitivity = 0.2

[node name="PlayerCam" type="Camera3D" parent="CamRig"]
transform = Transform3D(1, 0, 0, 0, 0.977427, -0.211273, 0, 0.211273, 0.977427, 0.1935, -0.698622, 6.92863)
fov = 53.3

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.732068, 0, 0.681232, 0, 1, 0, -0.681232, 0, 0.732068, 0, -2.6498, 0)
mesh = SubResource("BoxMesh_hx4ke")
surface_material_override/0 = SubResource("StandardMaterial3D_odo3o")

[node name="banana_peeling" parent="." instance=ExtResource("3_oj3oc")]
transform = Transform3D(-0.501521, -0.155247, 0, 0.118968, -0.384322, -0.337295, 0.0997408, -0.322211, 0.402315, 1.63215, -1.65745, -4.48866)

[node name="banana_whole" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.151768, -0.502585, 0, 0.502585, 0.151768, 0, 0, 0, 0.525, -1.86341, -2.83239, -3.36158)

[node name="banana_whole2" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.289833, -0.389963, -0.198873, 0.387052, 0.11688, 0.334895, -0.204481, -0.3315, 0.352023, -1.86341, -2.61485, -3.95615)

[node name="banana_whole3" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.189984, 0.350271, -0.34182, 0.387052, 0.11688, 0.334895, 0.299535, -0.373194, -0.215939, -1.86341, -2.61485, -0.940639)

[node name="banana_whole4" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.364382, -0.354877, -0.130049, -0.111902, 0.0712497, -0.507963, 0.361011, 0.380277, -0.0261892, -2.39268, -2.11811, -1.87309)

[node name="banana_whole7" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.364382, -0.354877, -0.130049, -0.111902, 0.0712497, -0.507963, 0.361011, 0.380277, -0.0261892, -0.0464768, -2.11811, -1.87309)

[node name="banana_whole5" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(-0.0100144, -0.520115, -0.0707482, -0.111902, 0.0712497, -0.507963, 0.512838, 0.00539032, -0.11222, -4.77235, -2.11811, -1.87309)

[node name="banana_whole6" parent="." instance=ExtResource("4_xt4fc")]
transform = Transform3D(0.495816, -0.118176, -0.125802, -0.111902, 0.0712497, -0.507963, 0.131414, 0.50654, 0.0421003, -3.72852, -2.11811, -1.92263)

[node name="RacewayBanner" parent="." instance=ExtResource("3_gtf4h")]
transform = Transform3D(1.43902, 0, -0.699435, 0, 1.6, 0, 0.699435, 0, 1.43902, -2.68862, -2.098, -7.98454)
texture_1 = ExtResource("7_imw12")
frame_count_1 = 2
texture_2 = ExtResource("8_f1hnb")
frame_count_2 = 2
texture_3 = ExtResource("9_3xnvp")
frame_count_3 = 2

[node name="RacerBen" parent="." instance=ExtResource("4_i6252")]
transform = Transform3D(1.12692, 0, -1.62802, 0, 1.98, 0, 1.62802, 0, 1.12692, 7.89291, -2.19439, -9.90498)
script = null

[node name="maple_tree" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.9818, 0, -14.6092)

[node name="maple_tree4" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3033, 0, -12.0715)

[node name="maple_tree2" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7311, 0, -19.1033)

[node name="maple_tree3" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.825207, 0, -16.9263)

[node name="maple_tree5" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.3788, 0, -8.02785)

[node name="maple_tree6" parent="." instance=ExtResource("4_0sh4n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.5261, 0, -20.2657)

[node name="car_solo[art]" parent="." instance=ExtResource("2_2lrcc")]
transform = Transform3D(0.709682, -5.62464e-17, 0.704523, -2.98023e-08, 1, -2.98023e-08, -0.704523, -3.11047e-16, 0.709682, 3.5001, -4.76837e-07, -3.87641)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.709682, -5.62463e-17, 0.704523, -2.98023e-08, 1, -2.98023e-08, -0.704523, -3.11047e-16, 0.709682, 3.57916, -2.06033, -3.94821)
mesh = SubResource("CylinderMesh_s1q6x")
skeleton = NodePath("../car_solo[art]")

[node name="skybox" parent="." instance=ExtResource("5_s1q6x")]
transform = Transform3D(0.84, 0, 0, 0, 0.84, 0, 0, 0, 0.84, -10.102, -24.8562, 2.873)

[node name="ben_callout" type="FmodEventEmitter2D" parent="."]
event_name = "event:/Ben_callout"
event_guid = "{cab7aedb-619f-4391-82a0-2716b66fbe06}"

[node name="keygen_type" type="FmodEventEmitter3D" parent="."]
event_name = "event:/KeyGen/KeyGenCharEntered"
event_guid = "{73ac589f-e5b0-48e1-9d96-1567fdb9f3c5}"

[node name="Subtitle" type="PanelContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -61.305
offset_right = 0.5
offset_bottom = -33.305
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_2lrcc")

[node name="Label" type="RichTextLabel" parent="Subtitle"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i6252")
}
